We have gpgrt_b64* API. We should use it.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG6ddaf2be9f48 common: Remove t-b64.c. | |||
rG26939ea2227b Use gpgrt_b64* API of libgpg-error. |
Related Objects
Related Objects
We have gpgrt_b64* API. We should use it.
rG GnuPG | |||
rG6ddaf2be9f48 common: Remove t-b64.c. | |||
rG26939ea2227b Use gpgrt_b64* API of libgpg-error. |